Change to use chipscope for remote debug

--- a/Top_envsettings.html
+++ b/Top_envsettings.html
@@ -16,42 +16,42 @@
 <tr>
 <td>PATHEXT</td>
 <td>.COM;<br>.EXE;<br>.BAT;<br>.CMD;<br>.VBS;<br>.VBE;<br>.JS;<br>.JSE;<br>.WSF;<br>.WSH;<br>.MSC</td>
-<td><font color=gray>.COM;<br>.EXE;<br>.BAT;<br>.CMD;<br>.VBS;<br>.VBE;<br>.JS;<br>.JSE;<br>.WSF;<br>.WSH;<br>.MSC</font></td>
+<td><font color=gray>&lt;&nbsp;data not available&nbsp;&gt;</font></td>
 <td><font color=gray>.COM;<br>.EXE;<br>.BAT;<br>.CMD;<br>.VBS;<br>.VBE;<br>.JS;<br>.JSE;<br>.WSF;<br>.WSH;<br>.MSC</font></td>
 <td><font color=gray>.COM;<br>.EXE;<br>.BAT;<br>.CMD;<br>.VBS;<br>.VBE;<br>.JS;<br>.JSE;<br>.WSF;<br>.WSH;<br>.MSC</font></td>
 </tr>
 <tr>
 <td>Path</td>
 <td>C:\Xilinx\14.7\ISE_DS\ISE\\lib\nt64;<br>C:\Xilinx\14.7\ISE_DS\ISE\\bin\nt64;<br>C:\Xilinx\14.7\ISE_DS\ISE\bin\nt64;<br>C:\Xilinx\14.7\ISE_DS\ISE\lib\nt64;<br>C:\Xilinx\14.7\ISE_DS\ISE\..\..\..\DocNav;<br>C:\Xilinx\14.7\ISE_DS\PlanAhead\bin;<br>C:\Xilinx\14.7\ISE_DS\EDK\bin\nt64;<br>C:\Xilinx\14.7\ISE_DS\EDK\lib\nt64;<br>C:\Xilinx\14.7\ISE_DS\EDK\gnu\microblaze\nt\bin;<br>C:\Xilinx\14.7\ISE_DS\EDK\gnu\powerpc-eabi\nt\bin;<br>C:\Xilinx\14.7\ISE_DS\EDK\gnuwin\bin;<br>C:\Xilinx\14.7\ISE_DS\EDK\gnu\arm\nt\bin;<br>C:\Xilinx\14.7\ISE_DS\EDK\gnu\microblaze\linux_toolchain\nt64_be\bin;<br>C:\Xilinx\14.7\ISE_DS\EDK\gnu\microblaze\linux_toolchain\nt64_le\bin;<br>C:\Xilinx\14.7\ISE_DS\common\bin\nt64;<br>C:\Xilinx\14.7\ISE_DS\common\lib\nt64;<br>C:\Program Files (x86)\VMware\VMware Workstation\bin\;<br>C:\Windows\system32;<br>C:\Windows;<br>C:\Windows\System32\Wbem;<br>C:\Windows\System32\WindowsPowerShell\v1.0\;<br>C:\Windows\System32\OpenSSH\;<br>C:\Program Files (x86)\NVIDIA Corporation\PhysX\Common;<br>C:\Program Files\MATLAB\R2023b\bin;<br>C:\Program Files\Wolfram Research\WolframScript\;<br>C:\Program Files (x86)\Motorola\MicrosoftSQLServer(x86)\160\Tools\Binn\;<br>C:\Program Files (x86)\Motorola\MicrosoftSQLServer(x64)\160\Tools\Binn\;<br>C:\Program Files (x86)\Motorola\MicrosoftSQLServer(x64)\Client SDK\ODBC\170\Tools\Binn\;<br>C:\Program Files (x86)\Motorola\MicrosoftSQLServer(x64)\160\DTS\Binn\;<br>C:\Program Files\nodejs\;<br>C:\ProgramData\chocolatey\bin;<br>C:\Program Files\Git\cmd;<br>C:\Program Files\PuTTY\;<br>C:\Program Files\dotnet\;<br>C:\Python312\Scripts\;<br>C:\Python312\;<br>C:\Users\Jerry Xu\AppData\Local\Programs\Python\Launcher\;<br>C:\Users\Jerry Xu\AppData\Local\Programs\Python\Python312\Scripts\;<br>C:\Users\Jerry Xu\AppData\Local\Programs\Python\Python312\;<br>C:\Users\Jerry Xu\AppData\Local\Microsoft\WindowsApps;<br>C:\Users\Jerry Xu\AppData\Roaming\npm;<br>C:\Users\Jerry Xu\AppData\Local\Programs\Microsoft VS Code\bin;<br>C:\Users\Jerry Xu\AppData\Local\Muse Hub\lib</td>
-<td><font color=gray>C:\Xilinx\14.7\ISE_DS\ISE\\lib\nt64;<br>C:\Xilinx\14.7\ISE_DS\ISE\\bin\nt64;<br>C:\Xilinx\14.7\ISE_DS\ISE\bin\nt64;<br>C:\Xilinx\14.7\ISE_DS\ISE\lib\nt64;<br>C:\Xilinx\14.7\ISE_DS\ISE\..\..\..\DocNav;<br>C:\Xilinx\14.7\ISE_DS\PlanAhead\bin;<br>C:\Xilinx\14.7\ISE_DS\EDK\bin\nt64;<br>C:\Xilinx\14.7\ISE_DS\EDK\lib\nt64;<br>C:\Xilinx\14.7\ISE_DS\EDK\gnu\microblaze\nt\bin;<br>C:\Xilinx\14.7\ISE_DS\EDK\gnu\powerpc-eabi\nt\bin;<br>C:\Xilinx\14.7\ISE_DS\EDK\gnuwin\bin;<br>C:\Xilinx\14.7\ISE_DS\EDK\gnu\arm\nt\bin;<br>C:\Xilinx\14.7\ISE_DS\EDK\gnu\microblaze\linux_toolchain\nt64_be\bin;<br>C:\Xilinx\14.7\ISE_DS\EDK\gnu\microblaze\linux_toolchain\nt64_le\bin;<br>C:\Xilinx\14.7\ISE_DS\common\bin\nt64;<br>C:\Xilinx\14.7\ISE_DS\common\lib\nt64;<br>C:\Program Files (x86)\VMware\VMware Workstation\bin\;<br>C:\Windows\system32;<br>C:\Windows;<br>C:\Windows\System32\Wbem;<br>C:\Windows\System32\WindowsPowerShell\v1.0\;<br>C:\Windows\System32\OpenSSH\;<br>C:\Program Files (x86)\NVIDIA Corporation\PhysX\Common;<br>C:\Program Files\MATLAB\R2023b\bin;<br>C:\Program Files\Wolfram Research\WolframScript\;<br>C:\Program Files (x86)\Motorola\MicrosoftSQLServer(x86)\160\Tools\Binn\;<br>C:\Program Files (x86)\Motorola\MicrosoftSQLServer(x64)\160\Tools\Binn\;<br>C:\Program Files (x86)\Motorola\MicrosoftSQLServer(x64)\Client SDK\ODBC\170\Tools\Binn\;<br>C:\Program Files (x86)\Motorola\MicrosoftSQLServer(x64)\160\DTS\Binn\;<br>C:\Program Files\nodejs\;<br>C:\ProgramData\chocolatey\bin;<br>C:\Program Files\Git\cmd;<br>C:\Program Files\PuTTY\;<br>C:\Program Files\dotnet\;<br>C:\Python312\Scripts\;<br>C:\Python312\;<br>C:\Users\Jerry Xu\AppData\Local\Programs\Python\Launcher\;<br>C:\Users\Jerry Xu\AppData\Local\Programs\Python\Python312\Scripts\;<br>C:\Users\Jerry Xu\AppData\Local\Programs\Python\Python312\;<br>C:\Users\Jerry Xu\AppData\Local\Microsoft\WindowsApps;<br>C:\Users\Jerry Xu\AppData\Roaming\npm;<br>C:\Users\Jerry Xu\AppData\Local\Programs\Microsoft VS Code\bin;<br>C:\Users\Jerry Xu\AppData\Local\Muse Hub\lib</font></td>
+<td><font color=gray>&lt;&nbsp;data not available&nbsp;&gt;</font></td>
 <td><font color=gray>C:\Xilinx\14.7\ISE_DS\ISE\\lib\nt64;<br>C:\Xilinx\14.7\ISE_DS\ISE\\bin\nt64;<br>C:\Xilinx\14.7\ISE_DS\ISE\bin\nt64;<br>C:\Xilinx\14.7\ISE_DS\ISE\lib\nt64;<br>C:\Xilinx\14.7\ISE_DS\ISE\..\..\..\DocNav;<br>C:\Xilinx\14.7\ISE_DS\PlanAhead\bin;<br>C:\Xilinx\14.7\ISE_DS\EDK\bin\nt64;<br>C:\Xilinx\14.7\ISE_DS\EDK\lib\nt64;<br>C:\Xilinx\14.7\ISE_DS\EDK\gnu\microblaze\nt\bin;<br>C:\Xilinx\14.7\ISE_DS\EDK\gnu\powerpc-eabi\nt\bin;<br>C:\Xilinx\14.7\ISE_DS\EDK\gnuwin\bin;<br>C:\Xilinx\14.7\ISE_DS\EDK\gnu\arm\nt\bin;<br>C:\Xilinx\14.7\ISE_DS\EDK\gnu\microblaze\linux_toolchain\nt64_be\bin;<br>C:\Xilinx\14.7\ISE_DS\EDK\gnu\microblaze\linux_toolchain\nt64_le\bin;<br>C:\Xilinx\14.7\ISE_DS\common\bin\nt64;<br>C:\Xilinx\14.7\ISE_DS\common\lib\nt64;<br>C:\Program Files (x86)\VMware\VMware Workstation\bin\;<br>C:\Windows\system32;<br>C:\Windows;<br>C:\Windows\System32\Wbem;<br>C:\Windows\System32\WindowsPowerShell\v1.0\;<br>C:\Windows\System32\OpenSSH\;<br>C:\Program Files (x86)\NVIDIA Corporation\PhysX\Common;<br>C:\Program Files\MATLAB\R2023b\bin;<br>C:\Program Files\Wolfram Research\WolframScript\;<br>C:\Program Files (x86)\Motorola\MicrosoftSQLServer(x86)\160\Tools\Binn\;<br>C:\Program Files (x86)\Motorola\MicrosoftSQLServer(x64)\160\Tools\Binn\;<br>C:\Program Files (x86)\Motorola\MicrosoftSQLServer(x64)\Client SDK\ODBC\170\Tools\Binn\;<br>C:\Program Files (x86)\Motorola\MicrosoftSQLServer(x64)\160\DTS\Binn\;<br>C:\Program Files\nodejs\;<br>C:\ProgramData\chocolatey\bin;<br>C:\Program Files\Git\cmd;<br>C:\Program Files\PuTTY\;<br>C:\Program Files\dotnet\;<br>C:\Python312\Scripts\;<br>C:\Python312\;<br>C:\Users\Jerry Xu\AppData\Local\Programs\Python\Launcher\;<br>C:\Users\Jerry Xu\AppData\Local\Programs\Python\Python312\Scripts\;<br>C:\Users\Jerry Xu\AppData\Local\Programs\Python\Python312\;<br>C:\Users\Jerry Xu\AppData\Local\Microsoft\WindowsApps;<br>C:\Users\Jerry Xu\AppData\Roaming\npm;<br>C:\Users\Jerry Xu\AppData\Local\Programs\Microsoft VS Code\bin;<br>C:\Users\Jerry Xu\AppData\Local\Muse Hub\lib</font></td>
 <td><font color=gray>C:\Xilinx\14.7\ISE_DS\ISE\\lib\nt64;<br>C:\Xilinx\14.7\ISE_DS\ISE\\bin\nt64;<br>C:\Xilinx\14.7\ISE_DS\ISE\bin\nt64;<br>C:\Xilinx\14.7\ISE_DS\ISE\lib\nt64;<br>C:\Xilinx\14.7\ISE_DS\ISE\..\..\..\DocNav;<br>C:\Xilinx\14.7\ISE_DS\PlanAhead\bin;<br>C:\Xilinx\14.7\ISE_DS\EDK\bin\nt64;<br>C:\Xilinx\14.7\ISE_DS\EDK\lib\nt64;<br>C:\Xilinx\14.7\ISE_DS\EDK\gnu\microblaze\nt\bin;<br>C:\Xilinx\14.7\ISE_DS\EDK\gnu\powerpc-eabi\nt\bin;<br>C:\Xilinx\14.7\ISE_DS\EDK\gnuwin\bin;<br>C:\Xilinx\14.7\ISE_DS\EDK\gnu\arm\nt\bin;<br>C:\Xilinx\14.7\ISE_DS\EDK\gnu\microblaze\linux_toolchain\nt64_be\bin;<br>C:\Xilinx\14.7\ISE_DS\EDK\gnu\microblaze\linux_toolchain\nt64_le\bin;<br>C:\Xilinx\14.7\ISE_DS\common\bin\nt64;<br>C:\Xilinx\14.7\ISE_DS\common\lib\nt64;<br>C:\Program Files (x86)\VMware\VMware Workstation\bin\;<br>C:\Windows\system32;<br>C:\Windows;<br>C:\Windows\System32\Wbem;<br>C:\Windows\System32\WindowsPowerShell\v1.0\;<br>C:\Windows\System32\OpenSSH\;<br>C:\Program Files (x86)\NVIDIA Corporation\PhysX\Common;<br>C:\Program Files\MATLAB\R2023b\bin;<br>C:\Program Files\Wolfram Research\WolframScript\;<br>C:\Program Files (x86)\Motorola\MicrosoftSQLServer(x86)\160\Tools\Binn\;<br>C:\Program Files (x86)\Motorola\MicrosoftSQLServer(x64)\160\Tools\Binn\;<br>C:\Program Files (x86)\Motorola\MicrosoftSQLServer(x64)\Client SDK\ODBC\170\Tools\Binn\;<br>C:\Program Files (x86)\Motorola\MicrosoftSQLServer(x64)\160\DTS\Binn\;<br>C:\Program Files\nodejs\;<br>C:\ProgramData\chocolatey\bin;<br>C:\Program Files\Git\cmd;<br>C:\Program Files\PuTTY\;<br>C:\Program Files\dotnet\;<br>C:\Python312\Scripts\;<br>C:\Python312\;<br>C:\Users\Jerry Xu\AppData\Local\Programs\Python\Launcher\;<br>C:\Users\Jerry Xu\AppData\Local\Programs\Python\Python312\Scripts\;<br>C:\Users\Jerry Xu\AppData\Local\Programs\Python\Python312\;<br>C:\Users\Jerry Xu\AppData\Local\Microsoft\WindowsApps;<br>C:\Users\Jerry Xu\AppData\Roaming\npm;<br>C:\Users\Jerry Xu\AppData\Local\Programs\Microsoft VS Code\bin;<br>C:\Users\Jerry Xu\AppData\Local\Muse Hub\lib</font></td>
 </tr>
 <tr>
 <td>XILINX</td>
 <td>C:\Xilinx\14.7\ISE_DS\ISE\</td>
-<td><font color=gray>C:\Xilinx\14.7\ISE_DS\ISE\</font></td>
+<td><font color=gray>&lt;&nbsp;data not available&nbsp;&gt;</font></td>
 <td><font color=gray>C:\Xilinx\14.7\ISE_DS\ISE\</font></td>
 <td><font color=gray>C:\Xilinx\14.7\ISE_DS\ISE\</font></td>
 </tr>
 <tr>
 <td>XILINX_DSP</td>
 <td>C:\Xilinx\14.7\ISE_DS\ISE</td>
-<td><font color=gray>C:\Xilinx\14.7\ISE_DS\ISE</font></td>
+<td><font color=gray>&lt;&nbsp;data not available&nbsp;&gt;</font></td>
 <td><font color=gray>C:\Xilinx\14.7\ISE_DS\ISE</font></td>
 <td><font color=gray>C:\Xilinx\14.7\ISE_DS\ISE</font></td>
 </tr>
 <tr>
 <td>XILINX_EDK</td>
 <td>C:\Xilinx\14.7\ISE_DS\EDK</td>
-<td><font color=gray>C:\Xilinx\14.7\ISE_DS\EDK</font></td>
+<td><font color=gray>&lt;&nbsp;data not available&nbsp;&gt;</font></td>
 <td><font color=gray>C:\Xilinx\14.7\ISE_DS\EDK</font></td>
 <td><font color=gray>C:\Xilinx\14.7\ISE_DS\EDK</font></td>
 </tr>
 <tr>
 <td>XILINX_PLANAHEAD</td>
 <td>C:\Xilinx\14.7\ISE_DS\PlanAhead</td>
-<td><font color=gray>C:\Xilinx\14.7\ISE_DS\PlanAhead</font></td>
+<td><font color=gray>&lt;&nbsp;data not available&nbsp;&gt;</font></td>
 <td><font color=gray>C:\Xilinx\14.7\ISE_DS\PlanAhead</font></td>
 <td><font color=gray>C:\Xilinx\14.7\ISE_DS\PlanAhead</font></td>
 </tr>
@@ -344,42 +344,6 @@
 <td>0</td>
 </tr>
 </TABLE>
-<A NAME="Translation Property Settings"></A>
-&nbsp;<BR><TABLE BORDER CELLSPACING=0 CELLPADDING=3 WIDTH='100%'>
-<TR ALIGN=CENTER BGCOLOR='#99CCFF'>
-<TD ALIGN=CENTER COLSPAN='4'><B>Translation Property Settings </B></TD>
-</tr>
-<tr bgcolor='#ffff99'>
-<td><b>Switch Name</b></td>
-<td><b>Property Name</b></td>
-<td><b>Value</b></td>
-<td><b>Default Value</b></td>
-</tr>
-<tr>
-<td><font color=gray>-intstyle</font></td>
-<td><font color=gray>&nbsp;</font></td>
-<td><font color=gray>ise</font></td>
-<td><font color=gray>None</font></td>
-</tr>
-<tr>
-<td><font color=gray>-dd</font></td>
-<td><font color=gray>&nbsp;</font></td>
-<td><font color=gray>_ngo</font></td>
-<td><font color=gray>None</font></td>
-</tr>
-<tr>
-<td><font color=gray>-p</font></td>
-<td><font color=gray>&nbsp;</font></td>
-<td><font color=gray>xc6vlx240t-ff1156-2</font></td>
-<td><font color=gray>None</font></td>
-</tr>
-<tr>
-<td><font color=gray>-uc</font></td>
-<td><font color=gray>&nbsp;</font></td>
-<td><font color=gray>otmb2019.ucf</font></td>
-<td><font color=gray>None</font></td>
-</tr>
-</TABLE>
 <A NAME="Map Property Settings"></A>
 &nbsp;<BR><TABLE BORDER CELLSPACING=0 CELLPADDING=3 WIDTH='100%'>
 <TR ALIGN=CENTER BGCOLOR='#99CCFF'>
@@ -509,28 +473,28 @@
 <tr>
 <td>CPU Architecture/Speed</td>
 <td>Intel(R) Xeon(R) W-2135 CPU @ 3.70GHz/3696 MHz</td>
-<td><font color=gray>Intel(R) Xeon(R) W-2135 CPU @ 3.70GHz/3696 MHz</font></td>
+<td><font color=gray>&lt;&nbsp; data not available &nbsp;&gt;</font></td>
 <td><font color=gray>Intel(R) Xeon(R) W-2135 CPU @ 3.70GHz/3696 MHz</font></td>
 <td><font color=gray>Intel(R) Xeon(R) W-2135 CPU @ 3.70GHz/3696 MHz</font></td>
 </tr>
 <tr>
 <td>Host</td>
 <td>DESKTOP-7PSUJGG</td>
-<td><font color=gray>DESKTOP-7PSUJGG</font></td>
+<td><font color=gray>&lt;&nbsp; data not available &nbsp;&gt;</font></td>
 <td><font color=gray>DESKTOP-7PSUJGG</font></td>
 <td><font color=gray>DESKTOP-7PSUJGG</font></td>
 </tr>
 <tr>
 <td>OS Name</td>
 <td>Microsoft , 64-bit</td>
-<td><font color=gray>Microsoft , 64-bit</font></td>
+<td><font color=gray>&lt;&nbsp; data not available &nbsp;&gt;</font></td>
 <td><font color=gray>Microsoft , 64-bit</font></td>
 <td><font color=gray>Microsoft , 64-bit</font></td>
 </tr>
 <tr>
 <td>OS Release</td>
 <td>major release  (build 9200)</td>
-<td><font color=gray>major release  (build 9200)</font></td>
+<td><font color=gray>&lt;&nbsp; data not available &nbsp;&gt;</font></td>
 <td><font color=gray>major release  (build 9200)</font></td>
 <td><font color=gray>major release  (build 9200)</font></td>
 </tr>
