--- a/Top_summary.html
+++ b/Top_summary.html
@@ -2,7 +2,7 @@
 <BODY TEXT='#000000' BGCOLOR='#FFFFFF' LINK='#0000EE' VLINK='#551A8B' ALINK='#FF0000'>
 <TABLE BORDER CELLSPACING=0 CELLPADDING=3 WIDTH='100%'>
 <TR ALIGN=CENTER BGCOLOR='#99CCFF'>
-<TD ALIGN=CENTER COLSPAN='4'><B>Top Project Status (09/23/2024 - 02:08:38)</B></TD></TR>
+<TD ALIGN=CENTER COLSPAN='4'><B>Top Project Status (09/23/2024 - 13:59:21)</B></TD></TR>
 <TR ALIGN=LEFT>
 <TD BGCOLOR='#FFFF99'><B>Project File:</B></TD>
 <TD>OTMB_2013_PRBS_Checker_USB.xise</TD>
@@ -13,7 +13,7 @@
 <TD BGCOLOR='#FFFF99'><B>Module Name:</B></TD>
 <TD>Top</TD>
 <TD BGCOLOR='#FFFF99'><B>Implementation State:</B></TD>
-<TD>Translated (Failed)</TD>
+<TD>Programming File Generated</TD>
 </TR>
 <TR ALIGN=LEFT>
 <TD BGCOLOR='#FFFF99'><B>Target Device:</B></TD>
@@ -66,19 +66,19 @@ System Settings</A>
 <TD ALIGN=LEFT><B>Errors</B></TD><TD ALIGN=LEFT><B>Warnings</B></TD><TD ALIGN=LEFT COLSPAN='2'><B>Infos</B></TD></TR>
 <TR ALIGN=LEFT><TD><A HREF_DISABLED='C:/Users/Jerry Xu/Desktop/OTMB/OTMB_2013_PRBS_Checker_USB\Top.syr'>Synthesis Report</A></TD><TD>Current</TD><TD>Thu Sep 5 23:27:36 2024</TD><TD>&nbsp;</TD><TD>&nbsp;</TD><TD COLSPAN='2'>&nbsp;</TD></TR>
 <TR ALIGN=LEFT><TD><A HREF_DISABLED='C:/Users/Jerry Xu/Desktop/OTMB/OTMB_2013_PRBS_Checker_USB\Top.bld'>Translation Report</A></TD><TD>Out of Date</TD><TD>Thu Sep 5 23:12:19 2024</TD><TD>&nbsp;</TD><TD>&nbsp;</TD><TD COLSPAN='2'>&nbsp;</TD></TR>
-<TR ALIGN=LEFT><TD><A HREF_DISABLED='C:/Users/Jerry Xu/Desktop/OTMB/OTMB_2013_PRBS_Checker_USB\Top_map.mrp'>Map Report</A></TD><TD>Out of Date</TD><TD>Thu Sep 5 23:12:46 2024</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT><A HREF_DISABLED='C:/Users/Jerry Xu/Desktop/OTMB/OTMB_2013_PRBS_Checker_USB\_xmsgs/map.xmsgs?&DataKey=Warning'>3 Warnings (0 new)</A></TD><TD ALIGN=LEFT COLSPAN='2'><A HREF_DISABLED='C:/Users/Jerry Xu/Desktop/OTMB/OTMB_2013_PRBS_Checker_USB\_xmsgs/map.xmsgs?&DataKey=Info'>6 Infos (0 new)</A></TD></TR>
-<TR ALIGN=LEFT><TD><A HREF_DISABLED='C:/Users/Jerry Xu/Desktop/OTMB/OTMB_2013_PRBS_Checker_USB\Top.par'>Place and Route Report</A></TD><TD>Out of Date</TD><TD>Thu Sep 5 23:13:30 2024</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT><A HREF_DISABLED='C:/Users/Jerry Xu/Desktop/OTMB/OTMB_2013_PRBS_Checker_USB\_xmsgs/par.xmsgs?&DataKey=Warning'>4 Warnings (0 new)</A></TD><TD ALIGN=LEFT COLSPAN='2'><A HREF_DISABLED='C:/Users/Jerry Xu/Desktop/OTMB/OTMB_2013_PRBS_Checker_USB\_xmsgs/par.xmsgs?&DataKey=Info'>4 Infos (0 new)</A></TD></TR>
+<TR ALIGN=LEFT><TD><A HREF_DISABLED='C:/Users/Jerry Xu/Desktop/OTMB/OTMB_2013_PRBS_Checker_USB\Top_map.mrp'>Map Report</A></TD><TD>Out of Date</TD><TD>Thu Sep 5 23:12:46 2024</TD><TD>&nbsp;</TD><TD>&nbsp;</TD><TD COLSPAN='2'>&nbsp;</TD></TR>
+<TR ALIGN=LEFT><TD><A HREF_DISABLED='C:/Users/Jerry Xu/Desktop/OTMB/OTMB_2013_PRBS_Checker_USB\Top.par'>Place and Route Report</A></TD><TD>Out of Date</TD><TD>Thu Sep 5 23:13:30 2024</TD><TD>&nbsp;</TD><TD>&nbsp;</TD><TD COLSPAN='2'>&nbsp;</TD></TR>
 <TR ALIGN=LEFT><TD>CPLD Fitter Report (Text)</TD><TD>&nbsp;</TD><TD>&nbsp;</TD><TD>&nbsp;</TD><TD>&nbsp;</TD><TD COLSPAN='2'>&nbsp;</TD></TR>
 <TR ALIGN=LEFT><TD>Power Report</TD><TD>&nbsp;</TD><TD>&nbsp;</TD><TD>&nbsp;</TD><TD>&nbsp;</TD><TD COLSPAN='2'>&nbsp;</TD></TR>
-<TR ALIGN=LEFT><TD><A HREF_DISABLED='C:/Users/Jerry Xu/Desktop/OTMB/OTMB_2013_PRBS_Checker_USB\Top.twr'>Post-PAR Static Timing Report</A></TD><TD>Out of Date</TD><TD>Thu Sep 5 23:13:41 2024</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT COLSPAN='2'><A HREF_DISABLED='C:/Users/Jerry Xu/Desktop/OTMB/OTMB_2013_PRBS_Checker_USB\_xmsgs/trce.xmsgs?&DataKey=Info'>4 Infos (0 new)</A></TD></TR>
-<TR ALIGN=LEFT><TD><A HREF_DISABLED='C:/Users/Jerry Xu/Desktop/OTMB/OTMB_2013_PRBS_Checker_USB\Top.bgn'>Bitgen Report</A></TD><TD>Out of Date</TD><TD>Thu Sep 5 23:15:49 2024</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT><A HREF_DISABLED='C:/Users/Jerry Xu/Desktop/OTMB/OTMB_2013_PRBS_Checker_USB\_xmsgs/bitgen.xmsgs?&DataKey=Warning'>2 Warnings (0 new)</A></TD><TD ALIGN=LEFT COLSPAN='2'><A HREF_DISABLED='C:/Users/Jerry Xu/Desktop/OTMB/OTMB_2013_PRBS_Checker_USB\_xmsgs/bitgen.xmsgs?&DataKey=Info'>1 Info (0 new)</A></TD></TR>
+<TR ALIGN=LEFT><TD><A HREF_DISABLED='C:/Users/Jerry Xu/Desktop/OTMB/OTMB_2013_PRBS_Checker_USB\Top.twr'>Post-PAR Static Timing Report</A></TD><TD>Out of Date</TD><TD>Thu Sep 5 23:13:41 2024</TD><TD>&nbsp;</TD><TD>&nbsp;</TD><TD COLSPAN='2'>&nbsp;</TD></TR>
+<TR ALIGN=LEFT><TD><A HREF_DISABLED='C:/Users/Jerry Xu/Desktop/OTMB/OTMB_2013_PRBS_Checker_USB\Top.bgn'>Bitgen Report</A></TD><TD>Out of Date</TD><TD>Thu Sep 5 23:15:49 2024</TD><TD>&nbsp;</TD><TD>&nbsp;</TD><TD COLSPAN='2'>&nbsp;</TD></TR>
 </TABLE>
 &nbsp;<BR><TABLE BORDER CELLSPACING=0 CELLPADDING=3 WIDTH='100%'>
 <TR ALIGN=CENTER BGCOLOR='#99CCFF'><TD ALIGN=CENTER COLSPAN='3'><B>Secondary Reports</B></TD><TD ALIGN=RIGHT WIDTH='10%'COLSPAN=1> <A HREF_DISABLED="?&ExpandedTable=SecondaryReports"><B>[-]</B></a></TD></TR>
 <TR BGCOLOR='#FFFF99'><TD><B>Report Name</B></TD><TD><B>Status</B></TD><TD COLSPAN='2'><B>Generated</B></TD></TR>
-<TR ALIGN=LEFT><TD><A HREF_DISABLED='C:/Users/Jerry Xu/Desktop/OTMB/OTMB_2013_PRBS_Checker_USB\webtalk.log'>WebTalk Log File</A></TD><TD>Out of Date</TD><TD COLSPAN='2'>Thu Sep 5 23:15:50 2024</TD></TR>
+<TR ALIGN=LEFT><TD><A HREF_DISABLED='C:/Users/Jerry Xu/Desktop/OTMB/OTMB_2013_PRBS_Checker_USB\webtalk.log'>WebTalk Log File</A></TD><TD>Current</TD><TD COLSPAN='2'>Mon Sep 23 13:59:21 2024</TD></TR>
 </TABLE>
 
 
-<br><center><b>Date Generated:</b> 09/23/2024 - 02:11:11</center>
+<br><center><b>Date Generated:</b> 09/23/2024 - 13:59:21</center>
 </BODY></HTML>
