Added reset decoding from CCB

--- a/ChipScope_TB_envsettings.html
+++ b/ChipScope_TB_envsettings.html
@@ -488,12 +488,6 @@
 <td>&nbsp;</td>
 </tr>
 <tr>
-<td>-mt</td>
-<td>Enable Multi-Threading</td>
-<td>off</td>
-<td>off</td>
-</tr>
-<tr>
 <td>-ol</td>
 <td>Place & Route Effort Level (Overall)</td>
 <td>high</td>
@@ -504,6 +498,12 @@
 <td>&nbsp;</td>
 <td>true</td>
 <td>false</td>
+</tr>
+<tr>
+<td>-smartguide</td>
+<td>&nbsp;</td>
+<td>C:/Users/Jerry Xu/Desktop/OTMB/OTMB_2013_PRBS_Checker_USB/ChipScope_TB_guide.ncd</td>
+<td>None</td>
 </tr>
 </TABLE>
 <A NAME="Operating System Information"></A>
