--- a/Top_summary.html
+++ b/Top_summary.html
@@ -2,7 +2,7 @@
 <BODY TEXT='#000000' BGCOLOR='#FFFFFF' LINK='#0000EE' VLINK='#551A8B' ALINK='#FF0000'>
 <TABLE BORDER CELLSPACING=0 CELLPADDING=3 WIDTH='100%'>
 <TR ALIGN=CENTER BGCOLOR='#99CCFF'>
-<TD ALIGN=CENTER COLSPAN='4'><B>Top Project Status (09/23/2024 - 13:59:21)</B></TD></TR>
+<TD ALIGN=CENTER COLSPAN='4'><B>Top Project Status (09/23/2024 - 18:43:51)</B></TD></TR>
 <TR ALIGN=LEFT>
 <TD BGCOLOR='#FFFF99'><B>Project File:</B></TD>
 <TD>OTMB_2013_PRBS_Checker_USB.xise</TD>
@@ -76,9 +76,10 @@ System Settings</A>
 &nbsp;<BR><TABLE BORDER CELLSPACING=0 CELLPADDING=3 WIDTH='100%'>
 <TR ALIGN=CENTER BGCOLOR='#99CCFF'><TD ALIGN=CENTER COLSPAN='3'><B>Secondary Reports</B></TD><TD ALIGN=RIGHT WIDTH='10%'COLSPAN=1> <A HREF_DISABLED="?&ExpandedTable=SecondaryReports"><B>[-]</B></a></TD></TR>
 <TR BGCOLOR='#FFFF99'><TD><B>Report Name</B></TD><TD><B>Status</B></TD><TD COLSPAN='2'><B>Generated</B></TD></TR>
-<TR ALIGN=LEFT><TD><A HREF_DISABLED='C:/Users/Jerry Xu/Desktop/OTMB/OTMB_2013_PRBS_Checker_USB\webtalk.log'>WebTalk Log File</A></TD><TD>Current</TD><TD COLSPAN='2'>Mon Sep 23 13:59:21 2024</TD></TR>
+<TR ALIGN=LEFT><TD><A HREF_DISABLED='C:/Users/Jerry Xu/Desktop/OTMB/OTMB_2013_PRBS_Checker_USB\ChipScope_TB.grf'>Guide Results Report</A></TD><TD>Current</TD><TD COLSPAN='2'>Mon Sep 23 18:42:36 2024</TD></TR>
+<TR ALIGN=LEFT><TD><A HREF_DISABLED='C:/Users/Jerry Xu/Desktop/OTMB/OTMB_2013_PRBS_Checker_USB\webtalk.log'>WebTalk Log File</A></TD><TD>Current</TD><TD COLSPAN='2'>Mon Sep 23 18:43:51 2024</TD></TR>
 </TABLE>
 
 
-<br><center><b>Date Generated:</b> 09/23/2024 - 13:59:21</center>
+<br><center><b>Date Generated:</b> 09/23/2024 - 18:43:51</center>
 </BODY></HTML>
