--- a/ChipScope_TB_summary.html
+++ b/ChipScope_TB_summary.html
@@ -2,7 +2,7 @@
 <BODY TEXT='#000000' BGCOLOR='#FFFFFF' LINK='#0000EE' VLINK='#551A8B' ALINK='#FF0000'>
 <TABLE BORDER CELLSPACING=0 CELLPADDING=3 WIDTH='100%'>
 <TR ALIGN=CENTER BGCOLOR='#99CCFF'>
-<TD ALIGN=CENTER COLSPAN='4'><B>Top Project Status (09/23/2024 - 19:20:05)</B></TD></TR>
+<TD ALIGN=CENTER COLSPAN='4'><B>ChipScope_TB Project Status</B></TD></TR>
 <TR ALIGN=LEFT>
 <TD BGCOLOR='#FFFF99'><B>Project File:</B></TD>
 <TD>OTMB_2013_PRBS_Checker_USB.xise</TD>
@@ -25,7 +25,7 @@ No Errors</TD>
 <TR ALIGN=LEFT>
 <TD BGCOLOR='#FFFF99'><B>Product Version:</B></TD><TD>ISE 14.7</TD>
 <TD BGCOLOR='#FFFF99'><UL><LI><B>Warnings:</B></LI></UL></TD>
-<TD ALIGN=LEFT><A HREF_DISABLED='C:/Users/Jerry Xu/Desktop/OTMB/OTMB_2013_PRBS_Checker_USB\_xmsgs/*.xmsgs?&DataKey=Warning'>120 Warnings (54 new)</A></TD>
+<TD ALIGN=LEFT><A HREF_DISABLED='C:/Users/Jerry Xu/Desktop/OTMB/OTMB_2013_PRBS_Checker_USB\_xmsgs/*.xmsgs?&DataKey=Warning'>120 Warnings (0 new)</A></TD>
 </TR>
 <TR ALIGN=LEFT>
 <TD BGCOLOR='#FFFF99'><B>Design Goal:</B></dif></TD>
@@ -457,21 +457,21 @@ System Settings</A>
 <TR ALIGN=CENTER BGCOLOR='#99CCFF'><TD ALIGN=CENTER COLSPAN='6'><B>Detailed Reports</B></TD><TD ALIGN=RIGHT WIDTH='10%'COLSPAN=1> <A HREF_DISABLED="?&ExpandedTable=DetailedReports"><B>[-]</B></a></TD></TR>
 <TR BGCOLOR='#FFFF99'><TD><B>Report Name</B></TD><TD><B>Status</B></TD><TD><B>Generated</B></TD>
 <TD ALIGN=LEFT><B>Errors</B></TD><TD ALIGN=LEFT><B>Warnings</B></TD><TD ALIGN=LEFT COLSPAN='2'><B>Infos</B></TD></TR>
-<TR ALIGN=LEFT><TD><A HREF_DISABLED='C:/Users/Jerry Xu/Desktop/OTMB/OTMB_2013_PRBS_Checker_USB\ChipScope_TB.syr'>Synthesis Report</A></TD><TD>Current</TD><TD>Mon Sep 23 19:16:42 2024</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT><A HREF_DISABLED='C:/Users/Jerry Xu/Desktop/OTMB/OTMB_2013_PRBS_Checker_USB\_xmsgs/xst.xmsgs?&DataKey=Warning'>57 Warnings (50 new)</A></TD><TD ALIGN=LEFT COLSPAN='2'><A HREF_DISABLED='C:/Users/Jerry Xu/Desktop/OTMB/OTMB_2013_PRBS_Checker_USB\_xmsgs/xst.xmsgs?&DataKey=Info'>69 Infos (69 new)</A></TD></TR>
-<TR ALIGN=LEFT><TD><A HREF_DISABLED='C:/Users/Jerry Xu/Desktop/OTMB/OTMB_2013_PRBS_Checker_USB\ChipScope_TB.bld'>Translation Report</A></TD><TD>Current</TD><TD>Mon Sep 23 19:16:47 2024</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT COLSPAN='2'>0</TD></TR>
-<TR ALIGN=LEFT><TD><A HREF_DISABLED='C:/Users/Jerry Xu/Desktop/OTMB/OTMB_2013_PRBS_Checker_USB\ChipScope_TB_map.mrp'>Map Report</A></TD><TD>Current</TD><TD>Mon Sep 23 19:17:17 2024</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT><A HREF_DISABLED='C:/Users/Jerry Xu/Desktop/OTMB/OTMB_2013_PRBS_Checker_USB\_xmsgs/map.xmsgs?&DataKey=Warning'>10 Warnings (2 new)</A></TD><TD ALIGN=LEFT COLSPAN='2'><A HREF_DISABLED='C:/Users/Jerry Xu/Desktop/OTMB/OTMB_2013_PRBS_Checker_USB\_xmsgs/map.xmsgs?&DataKey=Info'>7 Infos (0 new)</A></TD></TR>
-<TR ALIGN=LEFT><TD><A HREF_DISABLED='C:/Users/Jerry Xu/Desktop/OTMB/OTMB_2013_PRBS_Checker_USB\ChipScope_TB.par'>Place and Route Report</A></TD><TD>Current</TD><TD>Mon Sep 23 19:18:01 2024</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT><A HREF_DISABLED='C:/Users/Jerry Xu/Desktop/OTMB/OTMB_2013_PRBS_Checker_USB\_xmsgs/par.xmsgs?&DataKey=Warning'>44 Warnings (0 new)</A></TD><TD ALIGN=LEFT COLSPAN='2'><A HREF_DISABLED='C:/Users/Jerry Xu/Desktop/OTMB/OTMB_2013_PRBS_Checker_USB\_xmsgs/par.xmsgs?&DataKey=Info'>4 Infos (0 new)</A></TD></TR>
+<TR ALIGN=LEFT><TD><A HREF_DISABLED='C:/Users/Jerry Xu/Desktop/OTMB/OTMB_2013_PRBS_Checker_USB\ChipScope_TB.syr'>Synthesis Report</A></TD><TD>Current</TD><TD>Mon Sep 23 20:44:55 2024</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT><A HREF_DISABLED='C:/Users/Jerry Xu/Desktop/OTMB/OTMB_2013_PRBS_Checker_USB\_xmsgs/xst.xmsgs?&DataKey=Warning'>57 Warnings (0 new)</A></TD><TD ALIGN=LEFT COLSPAN='2'><A HREF_DISABLED='C:/Users/Jerry Xu/Desktop/OTMB/OTMB_2013_PRBS_Checker_USB\_xmsgs/xst.xmsgs?&DataKey=Info'>69 Infos (0 new)</A></TD></TR>
+<TR ALIGN=LEFT><TD><A HREF_DISABLED='C:/Users/Jerry Xu/Desktop/OTMB/OTMB_2013_PRBS_Checker_USB\ChipScope_TB.bld'>Translation Report</A></TD><TD>Current</TD><TD>Mon Sep 23 20:45:01 2024</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT COLSPAN='2'>0</TD></TR>
+<TR ALIGN=LEFT><TD><A HREF_DISABLED='C:/Users/Jerry Xu/Desktop/OTMB/OTMB_2013_PRBS_Checker_USB\ChipScope_TB_map.mrp'>Map Report</A></TD><TD>Current</TD><TD>Mon Sep 23 20:45:30 2024</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT><A HREF_DISABLED='C:/Users/Jerry Xu/Desktop/OTMB/OTMB_2013_PRBS_Checker_USB\_xmsgs/map.xmsgs?&DataKey=Warning'>10 Warnings (0 new)</A></TD><TD ALIGN=LEFT COLSPAN='2'><A HREF_DISABLED='C:/Users/Jerry Xu/Desktop/OTMB/OTMB_2013_PRBS_Checker_USB\_xmsgs/map.xmsgs?&DataKey=Info'>7 Infos (0 new)</A></TD></TR>
+<TR ALIGN=LEFT><TD><A HREF_DISABLED='C:/Users/Jerry Xu/Desktop/OTMB/OTMB_2013_PRBS_Checker_USB\ChipScope_TB.par'>Place and Route Report</A></TD><TD>Current</TD><TD>Mon Sep 23 20:46:15 2024</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT><A HREF_DISABLED='C:/Users/Jerry Xu/Desktop/OTMB/OTMB_2013_PRBS_Checker_USB\_xmsgs/par.xmsgs?&DataKey=Warning'>44 Warnings (0 new)</A></TD><TD ALIGN=LEFT COLSPAN='2'><A HREF_DISABLED='C:/Users/Jerry Xu/Desktop/OTMB/OTMB_2013_PRBS_Checker_USB\_xmsgs/par.xmsgs?&DataKey=Info'>4 Infos (0 new)</A></TD></TR>
 <TR ALIGN=LEFT><TD>Power Report</TD><TD>&nbsp;</TD><TD>&nbsp;</TD><TD>&nbsp;</TD><TD>&nbsp;</TD><TD COLSPAN='2'>&nbsp;</TD></TR>
-<TR ALIGN=LEFT><TD><A HREF_DISABLED='C:/Users/Jerry Xu/Desktop/OTMB/OTMB_2013_PRBS_Checker_USB\ChipScope_TB.twr'>Post-PAR Static Timing Report</A></TD><TD>Current</TD><TD>Mon Sep 23 19:18:12 2024</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT COLSPAN='2'><A HREF_DISABLED='C:/Users/Jerry Xu/Desktop/OTMB/OTMB_2013_PRBS_Checker_USB\_xmsgs/trce.xmsgs?&DataKey=Info'>4 Infos (0 new)</A></TD></TR>
-<TR ALIGN=LEFT><TD><A HREF_DISABLED='C:/Users/Jerry Xu/Desktop/OTMB/OTMB_2013_PRBS_Checker_USB\ChipScope_TB.bgn'>Bitgen Report</A></TD><TD>Current</TD><TD>Mon Sep 23 19:20:03 2024</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT><A HREF_DISABLED='C:/Users/Jerry Xu/Desktop/OTMB/OTMB_2013_PRBS_Checker_USB\_xmsgs/bitgen.xmsgs?&DataKey=Warning'>9 Warnings (2 new)</A></TD><TD ALIGN=LEFT COLSPAN='2'><A HREF_DISABLED='C:/Users/Jerry Xu/Desktop/OTMB/OTMB_2013_PRBS_Checker_USB\_xmsgs/bitgen.xmsgs?&DataKey=Info'>1 Info (0 new)</A></TD></TR>
+<TR ALIGN=LEFT><TD><A HREF_DISABLED='C:/Users/Jerry Xu/Desktop/OTMB/OTMB_2013_PRBS_Checker_USB\ChipScope_TB.twr'>Post-PAR Static Timing Report</A></TD><TD>Current</TD><TD>Mon Sep 23 20:46:27 2024</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT COLSPAN='2'><A HREF_DISABLED='C:/Users/Jerry Xu/Desktop/OTMB/OTMB_2013_PRBS_Checker_USB\_xmsgs/trce.xmsgs?&DataKey=Info'>4 Infos (0 new)</A></TD></TR>
+<TR ALIGN=LEFT><TD><A HREF_DISABLED='C:/Users/Jerry Xu/Desktop/OTMB/OTMB_2013_PRBS_Checker_USB\ChipScope_TB.bgn'>Bitgen Report</A></TD><TD>Current</TD><TD>Mon Sep 23 20:47:11 2024</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT><A HREF_DISABLED='C:/Users/Jerry Xu/Desktop/OTMB/OTMB_2013_PRBS_Checker_USB\_xmsgs/bitgen.xmsgs?&DataKey=Warning'>9 Warnings (0 new)</A></TD><TD ALIGN=LEFT COLSPAN='2'><A HREF_DISABLED='C:/Users/Jerry Xu/Desktop/OTMB/OTMB_2013_PRBS_Checker_USB\_xmsgs/bitgen.xmsgs?&DataKey=Info'>1 Info (0 new)</A></TD></TR>
 </TABLE>
 &nbsp;<BR><TABLE BORDER CELLSPACING=0 CELLPADDING=3 WIDTH='100%'>
 <TR ALIGN=CENTER BGCOLOR='#99CCFF'><TD ALIGN=CENTER COLSPAN='3'><B>Secondary Reports</B></TD><TD ALIGN=RIGHT WIDTH='10%'COLSPAN=1> <A HREF_DISABLED="?&ExpandedTable=SecondaryReports"><B>[-]</B></a></TD></TR>
 <TR BGCOLOR='#FFFF99'><TD><B>Report Name</B></TD><TD><B>Status</B></TD><TD COLSPAN='2'><B>Generated</B></TD></TR>
-<TR ALIGN=LEFT><TD><A HREF_DISABLED='C:/Users/Jerry Xu/Desktop/OTMB/OTMB_2013_PRBS_Checker_USB\ChipScope_TB.grf'>Guide Results Report</A></TD><TD>Current</TD><TD COLSPAN='2'>Mon Sep 23 19:17:58 2024</TD></TR>
-<TR ALIGN=LEFT><TD><A HREF_DISABLED='C:/Users/Jerry Xu/Desktop/OTMB/OTMB_2013_PRBS_Checker_USB\webtalk.log'>WebTalk Log File</A></TD><TD>Current</TD><TD COLSPAN='2'>Mon Sep 23 19:20:04 2024</TD></TR>
+<TR ALIGN=LEFT><TD><A HREF_DISABLED='C:/Users/Jerry Xu/Desktop/OTMB/OTMB_2013_PRBS_Checker_USB\ChipScope_TB.grf'>Guide Results Report</A></TD><TD>Current</TD><TD COLSPAN='2'>Mon Sep 23 20:46:12 2024</TD></TR>
+<TR ALIGN=LEFT><TD><A HREF_DISABLED='C:/Users/Jerry Xu/Desktop/OTMB/OTMB_2013_PRBS_Checker_USB\webtalk.log'>WebTalk Log File</A></TD><TD>Current</TD><TD COLSPAN='2'>Mon Sep 23 20:47:13 2024</TD></TR>
 </TABLE>
 
 
-<br><center><b>Date Generated:</b> 09/23/2024 - 19:20:05</center>
+<br><center><b>Date Generated:</b> 10/11/2024 - 16:19:32</center>
 </BODY></HTML>
