--- a/ChipScope_TB_summary.html
+++ b/ChipScope_TB_summary.html
@@ -2,7 +2,7 @@
 <BODY TEXT='#000000' BGCOLOR='#FFFFFF' LINK='#0000EE' VLINK='#551A8B' ALINK='#FF0000'>
 <TABLE BORDER CELLSPACING=0 CELLPADDING=3 WIDTH='100%'>
 <TR ALIGN=CENTER BGCOLOR='#99CCFF'>
-<TD ALIGN=CENTER COLSPAN='4'><B>ChipScope_TB Project Status (10/20/2024 - 21:57:29)</B></TD></TR>
+<TD ALIGN=CENTER COLSPAN='4'><B>ChipScope_TB Project Status (10/21/2024 - 05:05:24)</B></TD></TR>
 <TR ALIGN=LEFT>
 <TD BGCOLOR='#FFFF99'><B>Project File:</B></TD>
 <TD>OTMB_2013_PRBS_Checker_USB.xise</TD>
@@ -25,7 +25,7 @@ No Errors</TD>
 <TR ALIGN=LEFT>
 <TD BGCOLOR='#FFFF99'><B>Product Version:</B></TD><TD>ISE 14.7</TD>
 <TD BGCOLOR='#FFFF99'><UL><LI><B>Warnings:</B></LI></UL></TD>
-<TD ALIGN=LEFT><A HREF_DISABLED='C:/Users/Jerry Xu/Desktop/OTMB/OTMB_2013_PRBS_Checker_USB\_xmsgs/*.xmsgs?&DataKey=Warning'>149 Warnings (4 new)</A></TD>
+<TD ALIGN=LEFT><A HREF_DISABLED='C:/Users/Jerry Xu/Desktop/OTMB/OTMB_2013_PRBS_Checker_USB\_xmsgs/*.xmsgs?&DataKey=Warning'>149 Warnings (117 new)</A></TD>
 </TR>
 <TR ALIGN=LEFT>
 <TD BGCOLOR='#FFFF99'><B>Design Goal:</B></dif></TD>
@@ -90,19 +90,19 @@ System Settings</A>
 <TD COLSPAN='2'>&nbsp;</TD>
 </TR>
 <TR ALIGN=RIGHT><TD ALIGN=LEFT>Number of Slice LUTs</TD>
-<TD ALIGN=RIGHT>408</TD>
+<TD ALIGN=RIGHT>412</TD>
 <TD ALIGN=RIGHT>150,720</TD>
 <TD ALIGN=RIGHT>1%</TD>
 <TD COLSPAN='2'>&nbsp;</TD>
 </TR>
 <TR ALIGN=RIGHT><TD ALIGN=LEFT>&nbsp;&nbsp;&nbsp;&nbsp;Number used as logic</TD>
-<TD ALIGN=RIGHT>272</TD>
+<TD ALIGN=RIGHT>276</TD>
 <TD ALIGN=RIGHT>150,720</TD>
 <TD ALIGN=RIGHT>1%</TD>
 <TD COLSPAN='2'>&nbsp;</TD>
 </TR>
 <TR ALIGN=RIGHT><TD ALIGN=LEFT>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Number using O6 output only</TD>
-<TD ALIGN=RIGHT>139</TD>
+<TD ALIGN=RIGHT>143</TD>
 <TD>&nbsp;</TD>
 <TD>&nbsp;</TD>
 <TD COLSPAN='2'>&nbsp;</TD>
@@ -192,32 +192,32 @@ System Settings</A>
 <TD COLSPAN='2'>&nbsp;</TD>
 </TR>
 <TR ALIGN=RIGHT><TD ALIGN=LEFT>Number of occupied Slices</TD>
-<TD ALIGN=RIGHT>317</TD>
+<TD ALIGN=RIGHT>318</TD>
 <TD ALIGN=RIGHT>37,680</TD>
 <TD ALIGN=RIGHT>1%</TD>
 <TD COLSPAN='2'>&nbsp;</TD>
 </TR>
 <TR ALIGN=RIGHT><TD ALIGN=LEFT>Number of LUT Flip Flop pairs used</TD>
-<TD ALIGN=RIGHT>713</TD>
+<TD ALIGN=RIGHT>717</TD>
 <TD>&nbsp;</TD>
 <TD>&nbsp;</TD>
 <TD COLSPAN='2'>&nbsp;</TD>
 </TR>
 <TR ALIGN=RIGHT><TD ALIGN=LEFT>&nbsp;&nbsp;&nbsp;&nbsp;Number with an unused Flip Flop</TD>
 <TD ALIGN=RIGHT>158</TD>
-<TD ALIGN=RIGHT>713</TD>
+<TD ALIGN=RIGHT>717</TD>
 <TD ALIGN=RIGHT>22%</TD>
 <TD COLSPAN='2'>&nbsp;</TD>
 </TR>
 <TR ALIGN=RIGHT><TD ALIGN=LEFT>&nbsp;&nbsp;&nbsp;&nbsp;Number with an unused LUT</TD>
 <TD ALIGN=RIGHT>305</TD>
-<TD ALIGN=RIGHT>713</TD>
+<TD ALIGN=RIGHT>717</TD>
 <TD ALIGN=RIGHT>42%</TD>
 <TD COLSPAN='2'>&nbsp;</TD>
 </TR>
 <TR ALIGN=RIGHT><TD ALIGN=LEFT>&nbsp;&nbsp;&nbsp;&nbsp;Number of fully used LUT-FF pairs</TD>
-<TD ALIGN=RIGHT>250</TD>
-<TD ALIGN=RIGHT>713</TD>
+<TD ALIGN=RIGHT>254</TD>
+<TD ALIGN=RIGHT>717</TD>
 <TD ALIGN=RIGHT>35%</TD>
 <TD COLSPAN='2'>&nbsp;</TD>
 </TR>
@@ -493,21 +493,22 @@ System Settings</A>
 <TR ALIGN=CENTER BGCOLOR='#99CCFF'><TD ALIGN=CENTER COLSPAN='6'><B>Detailed Reports</B></TD><TD ALIGN=RIGHT WIDTH='10%'COLSPAN=1> <A HREF_DISABLED="?&ExpandedTable=DetailedReports"><B>[-]</B></a></TD></TR>
 <TR BGCOLOR='#FFFF99'><TD><B>Report Name</B></TD><TD><B>Status</B></TD><TD><B>Generated</B></TD>
 <TD ALIGN=LEFT><B>Errors</B></TD><TD ALIGN=LEFT><B>Warnings</B></TD><TD ALIGN=LEFT COLSPAN='2'><B>Infos</B></TD></TR>
-<TR ALIGN=LEFT><TD><A HREF_DISABLED='C:/Users/Jerry Xu/Desktop/OTMB/OTMB_2013_PRBS_Checker_USB\ChipScope_TB.syr'>Synthesis Report</A></TD><TD>Current</TD><TD>Sun Oct 20 21:55:07 2024</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT><A HREF_DISABLED='C:/Users/Jerry Xu/Desktop/OTMB/OTMB_2013_PRBS_Checker_USB\_xmsgs/xst.xmsgs?&DataKey=Warning'>117 Warnings (0 new)</A></TD><TD ALIGN=LEFT COLSPAN='2'><A HREF_DISABLED='C:/Users/Jerry Xu/Desktop/OTMB/OTMB_2013_PRBS_Checker_USB\_xmsgs/xst.xmsgs?&DataKey=Info'>72 Infos (49 new)</A></TD></TR>
-<TR ALIGN=LEFT><TD><A HREF_DISABLED='C:/Users/Jerry Xu/Desktop/OTMB/OTMB_2013_PRBS_Checker_USB\ChipScope_TB.bld'>Translation Report</A></TD><TD>Current</TD><TD>Sun Oct 20 21:55:13 2024</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT COLSPAN='2'>0</TD></TR>
-<TR ALIGN=LEFT><TD><A HREF_DISABLED='C:/Users/Jerry Xu/Desktop/OTMB/OTMB_2013_PRBS_Checker_USB\ChipScope_TB_map.mrp'>Map Report</A></TD><TD>Current</TD><TD>Sun Oct 20 21:55:46 2024</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT><A HREF_DISABLED='C:/Users/Jerry Xu/Desktop/OTMB/OTMB_2013_PRBS_Checker_USB\_xmsgs/map.xmsgs?&DataKey=Warning'>11 Warnings (2 new)</A></TD><TD ALIGN=LEFT COLSPAN='2'><A HREF_DISABLED='C:/Users/Jerry Xu/Desktop/OTMB/OTMB_2013_PRBS_Checker_USB\_xmsgs/map.xmsgs?&DataKey=Info'>7 Infos (0 new)</A></TD></TR>
-<TR ALIGN=LEFT><TD><A HREF_DISABLED='C:/Users/Jerry Xu/Desktop/OTMB/OTMB_2013_PRBS_Checker_USB\ChipScope_TB.par'>Place and Route Report</A></TD><TD>Current</TD><TD>Sun Oct 20 21:56:31 2024</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT><A HREF_DISABLED='C:/Users/Jerry Xu/Desktop/OTMB/OTMB_2013_PRBS_Checker_USB\_xmsgs/par.xmsgs?&DataKey=Warning'>11 Warnings (0 new)</A></TD><TD ALIGN=LEFT COLSPAN='2'><A HREF_DISABLED='C:/Users/Jerry Xu/Desktop/OTMB/OTMB_2013_PRBS_Checker_USB\_xmsgs/par.xmsgs?&DataKey=Info'>4 Infos (0 new)</A></TD></TR>
+<TR ALIGN=LEFT><TD><A HREF_DISABLED='C:/Users/Jerry Xu/Desktop/OTMB/OTMB_2013_PRBS_Checker_USB\ChipScope_TB.syr'>Synthesis Report</A></TD><TD>Current</TD><TD>Mon Oct 21 05:03:02 2024</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT><A HREF_DISABLED='C:/Users/Jerry Xu/Desktop/OTMB/OTMB_2013_PRBS_Checker_USB\_xmsgs/xst.xmsgs?&DataKey=Warning'>117 Warnings (117 new)</A></TD><TD ALIGN=LEFT COLSPAN='2'><A HREF_DISABLED='C:/Users/Jerry Xu/Desktop/OTMB/OTMB_2013_PRBS_Checker_USB\_xmsgs/xst.xmsgs?&DataKey=Info'>72 Infos (72 new)</A></TD></TR>
+<TR ALIGN=LEFT><TD><A HREF_DISABLED='C:/Users/Jerry Xu/Desktop/OTMB/OTMB_2013_PRBS_Checker_USB\ChipScope_TB.bld'>Translation Report</A></TD><TD>Current</TD><TD>Mon Oct 21 05:03:08 2024</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT COLSPAN='2'>0</TD></TR>
+<TR ALIGN=LEFT><TD><A HREF_DISABLED='C:/Users/Jerry Xu/Desktop/OTMB/OTMB_2013_PRBS_Checker_USB\ChipScope_TB_map.mrp'>Map Report</A></TD><TD>Current</TD><TD>Mon Oct 21 05:03:40 2024</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT><A HREF_DISABLED='C:/Users/Jerry Xu/Desktop/OTMB/OTMB_2013_PRBS_Checker_USB\_xmsgs/map.xmsgs?&DataKey=Warning'>11 Warnings (0 new)</A></TD><TD ALIGN=LEFT COLSPAN='2'><A HREF_DISABLED='C:/Users/Jerry Xu/Desktop/OTMB/OTMB_2013_PRBS_Checker_USB\_xmsgs/map.xmsgs?&DataKey=Info'>7 Infos (0 new)</A></TD></TR>
+<TR ALIGN=LEFT><TD><A HREF_DISABLED='C:/Users/Jerry Xu/Desktop/OTMB/OTMB_2013_PRBS_Checker_USB\ChipScope_TB.par'>Place and Route Report</A></TD><TD>Current</TD><TD>Mon Oct 21 05:04:25 2024</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT><A HREF_DISABLED='C:/Users/Jerry Xu/Desktop/OTMB/OTMB_2013_PRBS_Checker_USB\_xmsgs/par.xmsgs?&DataKey=Warning'>11 Warnings (0 new)</A></TD><TD ALIGN=LEFT COLSPAN='2'><A HREF_DISABLED='C:/Users/Jerry Xu/Desktop/OTMB/OTMB_2013_PRBS_Checker_USB\_xmsgs/par.xmsgs?&DataKey=Info'>4 Infos (0 new)</A></TD></TR>
 <TR ALIGN=LEFT><TD>Power Report</TD><TD>&nbsp;</TD><TD>&nbsp;</TD><TD>&nbsp;</TD><TD>&nbsp;</TD><TD COLSPAN='2'>&nbsp;</TD></TR>
-<TR ALIGN=LEFT><TD><A HREF_DISABLED='C:/Users/Jerry Xu/Desktop/OTMB/OTMB_2013_PRBS_Checker_USB\ChipScope_TB.twr'>Post-PAR Static Timing Report</A></TD><TD>Current</TD><TD>Sun Oct 20 21:56:42 2024</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT COLSPAN='2'><A HREF_DISABLED='C:/Users/Jerry Xu/Desktop/OTMB/OTMB_2013_PRBS_Checker_USB\_xmsgs/trce.xmsgs?&DataKey=Info'>4 Infos (0 new)</A></TD></TR>
-<TR ALIGN=LEFT><TD><A HREF_DISABLED='C:/Users/Jerry Xu/Desktop/OTMB/OTMB_2013_PRBS_Checker_USB\ChipScope_TB.bgn'>Bitgen Report</A></TD><TD>Current</TD><TD>Sun Oct 20 21:57:28 2024</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT><A HREF_DISABLED='C:/Users/Jerry Xu/Desktop/OTMB/OTMB_2013_PRBS_Checker_USB\_xmsgs/bitgen.xmsgs?&DataKey=Warning'>10 Warnings (2 new)</A></TD><TD ALIGN=LEFT COLSPAN='2'><A HREF_DISABLED='C:/Users/Jerry Xu/Desktop/OTMB/OTMB_2013_PRBS_Checker_USB\_xmsgs/bitgen.xmsgs?&DataKey=Info'>1 Info (0 new)</A></TD></TR>
+<TR ALIGN=LEFT><TD><A HREF_DISABLED='C:/Users/Jerry Xu/Desktop/OTMB/OTMB_2013_PRBS_Checker_USB\ChipScope_TB.twr'>Post-PAR Static Timing Report</A></TD><TD>Current</TD><TD>Mon Oct 21 05:04:36 2024</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT COLSPAN='2'><A HREF_DISABLED='C:/Users/Jerry Xu/Desktop/OTMB/OTMB_2013_PRBS_Checker_USB\_xmsgs/trce.xmsgs?&DataKey=Info'>4 Infos (0 new)</A></TD></TR>
+<TR ALIGN=LEFT><TD><A HREF_DISABLED='C:/Users/Jerry Xu/Desktop/OTMB/OTMB_2013_PRBS_Checker_USB\ChipScope_TB.bgn'>Bitgen Report</A></TD><TD>Current</TD><TD>Mon Oct 21 05:05:23 2024</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT><A HREF_DISABLED='C:/Users/Jerry Xu/Desktop/OTMB/OTMB_2013_PRBS_Checker_USB\_xmsgs/bitgen.xmsgs?&DataKey=Warning'>10 Warnings (0 new)</A></TD><TD ALIGN=LEFT COLSPAN='2'><A HREF_DISABLED='C:/Users/Jerry Xu/Desktop/OTMB/OTMB_2013_PRBS_Checker_USB\_xmsgs/bitgen.xmsgs?&DataKey=Info'>1 Info (0 new)</A></TD></TR>
 </TABLE>
 &nbsp;<BR><TABLE BORDER CELLSPACING=0 CELLPADDING=3 WIDTH='100%'>
 <TR ALIGN=CENTER BGCOLOR='#99CCFF'><TD ALIGN=CENTER COLSPAN='3'><B>Secondary Reports</B></TD><TD ALIGN=RIGHT WIDTH='10%'COLSPAN=1> <A HREF_DISABLED="?&ExpandedTable=SecondaryReports"><B>[-]</B></a></TD></TR>
 <TR BGCOLOR='#FFFF99'><TD><B>Report Name</B></TD><TD><B>Status</B></TD><TD COLSPAN='2'><B>Generated</B></TD></TR>
-<TR ALIGN=LEFT><TD><A HREF_DISABLED='C:/Users/Jerry Xu/Desktop/OTMB/OTMB_2013_PRBS_Checker_USB\ChipScope_TB.grf'>Guide Results Report</A></TD><TD>Current</TD><TD COLSPAN='2'>Sun Oct 20 21:56:27 2024</TD></TR>
-<TR ALIGN=LEFT><TD><A HREF_DISABLED='C:/Users/Jerry Xu/Desktop/OTMB/OTMB_2013_PRBS_Checker_USB\webtalk.log'>WebTalk Log File</A></TD><TD>Current</TD><TD COLSPAN='2'>Sun Oct 20 21:57:29 2024</TD></TR>
+<TR ALIGN=LEFT><TD><A HREF_DISABLED='C:/Users/Jerry Xu/Desktop/OTMB/OTMB_2013_PRBS_Checker_USB\isim.log'>ISIM Simulator Log</A></TD><TD>Out of Date</TD><TD COLSPAN='2'>Mon Oct 21 04:38:45 2024</TD></TR>
+<TR ALIGN=LEFT><TD><A HREF_DISABLED='C:/Users/Jerry Xu/Desktop/OTMB/OTMB_2013_PRBS_Checker_USB\ChipScope_TB.grf'>Guide Results Report</A></TD><TD>Current</TD><TD COLSPAN='2'>Mon Oct 21 05:04:22 2024</TD></TR>
+<TR ALIGN=LEFT><TD><A HREF_DISABLED='C:/Users/Jerry Xu/Desktop/OTMB/OTMB_2013_PRBS_Checker_USB\webtalk.log'>WebTalk Log File</A></TD><TD>Current</TD><TD COLSPAN='2'>Mon Oct 21 05:05:24 2024</TD></TR>
 </TABLE>
 
 
-<br><center><b>Date Generated:</b> 10/20/2024 - 21:57:29</center>
+<br><center><b>Date Generated:</b> 10/21/2024 - 05:05:24</center>
 </BODY></HTML>
